@@ -1,18 +1,19 @@
 package ru.practicum.shareit;
 
+import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import ru.practicum.shareit.exception.notfound.ItemNotFoundException;
 import ru.practicum.shareit.exception.notfound.UserNotFoundException;
-import ru.practicum.shareit.item.dal.ItemDbStorage;
 import ru.practicum.shareit.item.dto.request.ItemDto;
 import ru.practicum.shareit.item.dto.request.ItemUpdateDto;
 import ru.practicum.shareit.item.dto.response.ItemResponseDto;
-import ru.practicum.shareit.item.service.ItemServiceImpl;
-import ru.practicum.shareit.user.dal.UserDbStorage;
+import ru.practicum.shareit.item.service.ItemService;
 import ru.practicum.shareit.user.dto.request.UserCreateRequestDto;
-import ru.practicum.shareit.user.service.UserServiceImpl;
+import ru.practicum.shareit.user.service.UserService;
 
 import java.util.List;
 
@@ -21,110 +22,93 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@SpringBootTest
+@Transactional
 class ItemServiceImplTest {
 
-    private ItemServiceImpl itemService;
-    private UserServiceImpl userService;
+    @Autowired
+    private ItemService itemService;
+    @Autowired
+    private UserService userService;
 
     private long ownerId;
 
     @BeforeEach
-    void setUp() throws Exception {
-        UserDbStorage userStorage = new UserDbStorage();
-        ItemDbStorage itemStorage = new ItemDbStorage();
-        userService = new UserServiceImpl(userStorage);
-        itemService = new ItemServiceImpl(itemStorage, userStorage);
-        ownerId = userService.create(buildUserDto("owner@example.com", "Owner")).getId();
+    void setUp() {
+        ownerId = userService.create(createUserDto("owner@example.com", "Owner")).getId();
     }
 
     @Test
     @DisplayName("createItem: создание item")
     void createItem() {
-        ItemDto dto = buildItemDto("Дрель", "Электрическая", true);
-
-        ItemResponseDto result = itemService.createItem(dto, ownerId);
+        ItemResponseDto result = itemService.createItem(itemDto("Дрель", "Электрическая", true), ownerId);
 
         assertTrue(result.getId() > 0);
         assertEquals("Дрель", result.getName());
         assertEquals("Электрическая", result.getDescription());
-        assertTrue(result.isAvailable());
+        assertTrue(result.getAvailable());
     }
 
     @Test
     @DisplayName("createItem: несуществующий userId")
     void createItemUnknownUser() {
-        ItemDto dto = buildItemDto("Лопата", "Штыковая", true);
-
         assertThrows(UserNotFoundException.class,
-                () -> itemService.createItem(dto, 999L));
+                () -> itemService.createItem(itemDto("Лопата", "Штыковая", true), 999_999L));
     }
 
     @Test
     @DisplayName("createItem: два разных пользователя создают item")
-    void createItemTwoOwners() throws Exception {
-        long owner2 = userService.create(buildUserDto("owner2@example.com", "Owner2")).getId();
+    void createItemTwoOwners() {
+        long owner2 = userService.create(createUserDto("owner2@example.com", "Owner2")).getId();
 
-        itemService.createItem(buildItemDto("Вещь1", "Описание1", true), ownerId);
-        itemService.createItem(buildItemDto("Вещь2", "Описание2", true), owner2);
+        itemService.createItem(itemDto("Вещь1", "Описание1", true), ownerId);
+        itemService.createItem(itemDto("Вещь2", "Описание2", true), owner2);
 
         assertEquals(1, itemService.getItems(ownerId).size());
         assertEquals(1, itemService.getItems(owner2).size());
     }
 
     @Test
-    @DisplayName("updateItem: обновление названия")
-    void updateItem() throws Exception {
-        ItemResponseDto created = itemService.createItem(
-                buildItemDto("Старое название", "Описание", true), ownerId);
+    @DisplayName("updateItem: обновление названия, описание не меняется")
+    void updateItemName() {
+        ItemResponseDto created = itemService.createItem(itemDto("Старое", "Описание", true), ownerId);
+        ItemResponseDto updated = itemService.updateItem(updateDto("Новое", null, null), created.getId(), ownerId);
 
-        ItemUpdateDto updateDto = buildUpdateDto("Новое название", null, null);
-        ItemResponseDto updated = itemService.updateItem(updateDto, created.getId(), ownerId);
-
-        assertEquals("Новое название", updated.getName());
+        assertEquals("Новое", updated.getName());
         assertEquals("Описание", updated.getDescription());
     }
 
     @Test
     @DisplayName("updateItem: обновление описания и доступности")
-    void updateItemDescriptionAndAvailable() throws Exception {
-        ItemResponseDto created = itemService.createItem(
-                buildItemDto("Молоток", "Старое описание", true), ownerId);
+    void updateItemDescriptionAndAvailable() {
+        ItemResponseDto created = itemService.createItem(itemDto("Молоток", "Старое", true), ownerId);
+        ItemResponseDto updated = itemService.updateItem(updateDto(null, "Новое", false), created.getId(), ownerId);
 
-        ItemUpdateDto updateDto = buildUpdateDto(null, "Новое описание", false);
-        ItemResponseDto updated = itemService.updateItem(updateDto, created.getId(), ownerId);
-
-        assertEquals("Новое описание", updated.getDescription());
-        assertFalse(updated.isAvailable());
+        assertEquals("Новое", updated.getDescription());
+        assertFalse(updated.getAvailable());
     }
 
     @Test
-    @DisplayName("updateItem: неверная пара itemId + userId")
-    void updateItemWrongOwner() throws Exception {
-        ItemResponseDto created = itemService.createItem(
-                buildItemDto("Вещь", "Описание", true), ownerId);
-
-        long strangerUserId = userService.create(buildUserDto("stranger@example.com", "Stranger")).getId();
-        ItemUpdateDto updateDto = buildUpdateDto("Чужое", null, null);
+    @DisplayName("updateItem: чужой userId")
+    void updateItemWrongOwner() {
+        ItemResponseDto created = itemService.createItem(itemDto("Вещь", "Описание", true), ownerId);
+        long stranger = userService.create(createUserDto("stranger@example.com", "Stranger")).getId();
 
         assertThrows(ItemNotFoundException.class,
-                () -> itemService.updateItem(updateDto, created.getId(), strangerUserId));
+                () -> itemService.updateItem(updateDto("Чужое", null, null), created.getId(), stranger));
     }
 
     @Test
     @DisplayName("updateItem: несуществующий itemId")
-    void updateItemUnknownItem() throws Exception {
-        ItemUpdateDto updateDto = buildUpdateDto("X", null, null);
-
+    void updateItemUnknownItem() {
         assertThrows(ItemNotFoundException.class,
-                () -> itemService.updateItem(updateDto, 999L, ownerId));
+                () -> itemService.updateItem(updateDto("X", null, null), 999_999L, ownerId));
     }
 
     @Test
     @DisplayName("getItem: возвращает нужную вещь")
     void getItem() {
-        ItemResponseDto created = itemService.createItem(
-                buildItemDto("Книга", "Интересная", true), ownerId);
-
+        ItemResponseDto created = itemService.createItem(itemDto("Книга", "Интересная", true), ownerId);
         ItemResponseDto found = itemService.getItem(created.getId());
 
         assertEquals(created.getId(), found.getId());
@@ -134,18 +118,17 @@ class ItemServiceImplTest {
     @Test
     @DisplayName("getItem: несуществующий id")
     void getItemUnknownId() {
-        assertThrows(ItemNotFoundException.class,
-                () -> itemService.getItem(42L));
+        assertThrows(ItemNotFoundException.class, () -> itemService.getItem(999_999L));
     }
 
     @Test
-    @DisplayName("getItems: список вещей пользователя")
-    void getItemsReturnsOnlyOwnerItems() throws Exception {
-        long owner2 = userService.create(buildUserDto("o2@example.com", "O2")).getId();
+    @DisplayName("getItems: возвращает только вещи данного владельца")
+    void getItemsReturnsOnlyOwnerItems() {
+        long owner2 = userService.create(createUserDto("o2@example.com", "O2")).getId();
 
-        itemService.createItem(buildItemDto("Вещь А", "Описание А", true), ownerId);
-        itemService.createItem(buildItemDto("Вещь Б", "Описание Б", true), ownerId);
-        itemService.createItem(buildItemDto("Чужая вещь", "Чужое описание", true), owner2);
+        itemService.createItem(itemDto("Вещь А", "Описание А", true), ownerId);
+        itemService.createItem(itemDto("Вещь Б", "Описание Б", true), ownerId);
+        itemService.createItem(itemDto("Чужая", "Чужое", true), owner2);
 
         List<ItemResponseDto> items = itemService.getItems(ownerId);
 
@@ -163,19 +146,19 @@ class ItemServiceImplTest {
     @Test
     @DisplayName("searchItem: поиск по части названия")
     void searchItemByName() {
-        itemService.createItem(buildItemDto("Электродрель", "Мощная дрель", true), ownerId);
-        itemService.createItem(buildItemDto("Перфоратор", "Хороший перфоратор", true), ownerId);
+        itemService.createItem(itemDto("Электродрель", "Мощная дрель", true), ownerId);
+        itemService.createItem(itemDto("Перфоратор", "Хороший перфоратор", true), ownerId);
 
         List<ItemResponseDto> result = itemService.searchItem("дрель");
 
         assertEquals(1, result.size());
-        assertEquals("Электродрель", result.getFirst().getName());
+        assertEquals("Электродрель", result.get(0).getName());
     }
 
     @Test
     @DisplayName("searchItem: поиск по части описания")
     void searchItemByDescription() {
-        itemService.createItem(buildItemDto("Инструмент", "гаечный ключ", true), ownerId);
+        itemService.createItem(itemDto("Инструмент", "гаечный ключ", true), ownerId);
 
         List<ItemResponseDto> result = itemService.searchItem("гаечный");
 
@@ -185,17 +168,15 @@ class ItemServiceImplTest {
     @Test
     @DisplayName("searchItem: недоступные вещи не попадают в результат")
     void searchItemUnavailable() {
-        itemService.createItem(buildItemDto("Велосипед", "Горный велосипед", false), ownerId);
+        itemService.createItem(itemDto("Велосипед", "Горный", false), ownerId);
 
-        List<ItemResponseDto> result = itemService.searchItem("велосипед");
-
-        assertTrue(result.isEmpty());
+        assertTrue(itemService.searchItem("велосипед").isEmpty());
     }
 
     @Test
     @DisplayName("searchItem: пустая строка")
     void searchItemEmptyText() {
-        itemService.createItem(buildItemDto("Что-то", "Описание", true), ownerId);
+        itemService.createItem(itemDto("Что-то", "Описание", true), ownerId);
 
         assertTrue(itemService.searchItem("").isEmpty());
         assertTrue(itemService.searchItem(null).isEmpty());
@@ -204,19 +185,19 @@ class ItemServiceImplTest {
     @Test
     @DisplayName("searchItem: нет совпадений")
     void searchItemNoMatch() {
-        itemService.createItem(buildItemDto("Стул", "Деревянный стул", true), ownerId);
+        itemService.createItem(itemDto("Стул", "Деревянный стул", true), ownerId);
 
         assertTrue(itemService.searchItem("ракета").isEmpty());
     }
 
-    private UserCreateRequestDto buildUserDto(String email, String name) throws Exception {
+    private UserCreateRequestDto createUserDto(String email, String name) {
         UserCreateRequestDto dto = new UserCreateRequestDto();
         setField(dto, "email", email);
         setField(dto, "name", name);
         return dto;
     }
 
-    private ItemDto buildItemDto(String name, String description, boolean available) {
+    private ItemDto itemDto(String name, String description, boolean available) {
         ItemDto dto = new ItemDto();
         dto.setName(name);
         dto.setDescription(description);
@@ -224,7 +205,7 @@ class ItemServiceImplTest {
         return dto;
     }
 
-    private ItemUpdateDto buildUpdateDto(String name, String description, Boolean available) throws Exception {
+    private ItemUpdateDto updateDto(String name, String description, Boolean available) {
         ItemUpdateDto dto = new ItemUpdateDto();
         if (name != null) setField(dto, "name", name);
         if (description != null) setField(dto, "description", description);
@@ -232,9 +213,13 @@ class ItemServiceImplTest {
         return dto;
     }
 
-    private void setField(Object obj, String fieldName, Object value) throws Exception {
-        var field = obj.getClass().getDeclaredField(fieldName);
-        field.setAccessible(true);
-        field.set(obj, value);
+    private void setField(Object obj, String field, Object value) {
+        try {
+            var f = obj.getClass().getDeclaredField(field);
+            f.setAccessible(true);
+            f.set(obj, value);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 }
